--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="dashboard-row">
         <div class="dashboard-buttons">
-            <button class="dashboard-buttons-study">
+            <button class="dashboard-buttons-study" (click)="goToPage('form')">
                 <span class="dashboard-buttons-teach-icon">
                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5 6H14C15.5913 6 17.1174 6.65555 18.2426 7.82245C19.3679 8.98934 20 10.572 20 12.2222V34C20 32.7623 19.5259 31.5753 18.682 30.7002C17.8381 29.825 16.6935 29.3333 15.5 29.3333H5V6Z" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
@@ -20,7 +20,7 @@
                     Estudar
                 </span>
             </button>
-            <button class="dashboard-buttons-teach">
+            <button class="dashboard-buttons-teach" (click)="goToPage('form')">
                 <span class="dashboard-buttons-teach-icon">
                     <svg width="40" height="40" viewBox="0 0 34 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M16.4444 21.04V28.52M16.4444 21.04H10.8889M16.4444 21.04H22M10.8889 21.04L4.22222 30M10.8889 21.04H6C3.79086 21.04 2 19.2491 2 17.04V6C2 3.79087 3.79086 2 6 2H28C30.2091 2 32 3.79086 32 6V17.04C32 19.2491 30.2091 21.04 28 21.04H22M22 21.04L29.7778 30" stroke="white" stroke-width="3" stroke-linecap="round"/>
