--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,1 +1,10 @@
-<p>form works!</p>
+<div class="title">
+    <div class="title-menu">
+        <img src="../../assets/img/Voltar.png" alt="Back">
+        <img src="../../assets/img/Proffy.png" alt="Home">
+    </div>
+    <div class="title-text">
+        
+    </div>
+</div>
+<div class="form"></div>
