--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -4,7 +4,13 @@
         <img src="../../assets/img/Proffy.png" alt="Home">
     </div>
     <div class="title-text">
+        <h1>Que incrível que você quer dar aulas.</h1>
+        <h4>O primeiro passo, é preencher esse
+            formulário de inscrição.</h4>
+    </div>
+</div>
+<div class="form">
+    <div class="form-box">
         
     </div>
 </div>
-<div class="form"></div>
