--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -5,7 +5,7 @@
     height: 350px;
     background-color: $purple;
     &-menu{
-        width: 60%;
+        width: 75%;
         margin: 0px auto;
         padding-top: 20px;
         display: flex;
@@ -15,8 +15,39 @@
             cursor: pointer;
         }
     }
+    &-text{
+        width: 50%;
+        margin: 0 auto;
+        h1{
+            width: 350px;
+            font-weight: bold;
+            font-size: 36px;
+            line-height: 42px;
+            color: $white;
+        }
+        h4{
+            width: 283px;
+            font-family: 'Poppins', sans-serif;           
+            font-style: normal;
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 26px;
+            color: $titlepurple;
+        }
+    }
 }
 
 .form{
     background-color: $backgroundcolor;
+    &-box{
+        width: 50%;
+        min-height: 500px;
+        background-color: $white;
+        border: 1px solid #E6E6F0;
+        box-sizing: border-box;
+        border-radius: 8px;
+        position: absolute;
+        top: 275px;
+        left: 25%;
+    }
 }
