--- a/src/app/shared/_variables.scss
+++ b/src/app/shared/_variables.scss
@@ -1,6 +1,8 @@
 $purple: #8257E5;
 $lightpurple: #9871F5;
 $titlepurple: #D4C2FF;
+$darkpurple: #32264D;
 $white: #FFFFFF;
 $lightgreen: #04D361;
 $backgroundcolor: #E5E5E5;
+$bordercolor:  #E6E6F0;
