--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -11,6 +11,107 @@
 </div>
 <div class="form">
     <div class="form-box">
-        
+        <div class="form-box-content">
+            <form [formGroup]="teachForm" (ngSubmit)="onSubmit()">
+                <div class="form-content">
+
+                    <h2>Seus dados</h2>
+                    <div class="horizontal-line"></div>
+                    <!-- First form  -->
+                    <div>
+                      <label for="name">
+                        Nome completo
+                      </label>
+                      <input id="name" type="text" formControlName="name">
+                    </div>
+                  
+                    <div>
+                      <label for="photo">
+                       Link da sua foto
+                      </label>
+                      <input id="photo" type="text" formControlName="photo">
+                    </div>
+    
+                    <div>
+                        <label for="whatsapp">
+                            Whatsapp
+                        </label>
+                        <input id="whatsapp" type="text" name="whatsapp">
+                    </div>
+    
+                    <div>
+                        <label for="biography">
+                            Biografia
+                        </label>
+                        <input id="biography" type="text" name="biography">
+                    </div>
+                  <!-- ------------------------------- -->
+    
+                  <!-- Second Form -->
+                    <h2>
+                        Sobre a aula
+                    </h2>
+                    <div class="horizontal-line"></div>
+                    <div>
+                        <label for="discipline">
+                            Matéria
+                        </label>
+                        <input type="discipline" name="discipline" id="discipline">
+                    </div>
+                    <div>
+                        <label for="costTeach">
+                            Custo da sua hora por aula
+                        </label>
+                        <input type="text" name="costTeach" id="costTeach">
+                    </div>
+                    <!-- ---------------------- -->
+    
+                    <!-- Third Form -->
+    
+                    <h2>
+                        Horários disponíveis
+                    </h2>
+                    <span>+ Novo horário</span>
+                    <div class="horizontal-line"></div>
+                    <div>
+                        <label for="dayweek">
+                           Dia da semana 
+                        </label>
+                        <select name="dayweek" id="dayweek">
+                            <!-- <option *ngFor="let item of list"></option> -->
+                        </select>
+                    </div>
+                    <div>
+                        <label for="starthour">
+                            Das
+                        </label>
+                        <input type="text" name="starthour" id="starthour">
+                    </div>
+                    <div>
+                        <label for="endhour">
+                            Até
+                        </label>
+                        <input type="text" name="endhour" id="endhour">
+                    </div>
+                </div>
+
+                <div class="form-footer">
+                    <div class="form-footer-text">
+                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M16 16V10" stroke="#8257E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M16 21.3333L16 21.3333" stroke="#8257E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M4 19.1747V12.8253C4 10.6893 5.136 8.71465 6.98133 7.63998L12.9813 4.14798C14.8467 3.06265 17.152 3.06265 19.0173 4.14798L25.0173 7.63998C26.864 8.71465 28 10.6893 28 12.8253V19.1747C28 21.3107 26.864 23.2853 25.0187 24.36L19.0187 27.852C17.1533 28.9373 14.848 28.9373 12.9827 27.852L6.98267 24.36C5.136 23.2853 4 21.3107 4 19.1747V19.1747Z" stroke="#8257E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                            
+                        <span>Importante!</span>
+                        <span>Preencha todos os dados</span>
+                    </div>
+                        
+                    <button class="button" type="submit">Salvar cadastro</button>
+                </div>
+                
+              </form>
+        </div>
+
     </div>
 </div>
